--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Miguel Ángel MD. 
 logo: /assets/img/Miguel-1.jpg
 show_downloads: True
-theme: jekyll-theme-minimal
+theme: jekyll-theme-tactile 
