--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Miguel Ángel MD. / Data Science Portfolio
-logo: /assets/img/Miguel-1.jpg
+#logo: /assets/img/Miguel-1.jpg
 #show_downloads: True
-theme: jekyll-theme-tactile 
+#theme: jekyll-theme-tactile 
+remote_theme: pages-themes/tactile@v0.2.0
