--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Miguel Ángel MD. / Data Science Portfolio
+#title: Miguel Ángel MD. / Data Science Portfolio
 #logo: /assets/img/Miguel-1.jpg
 #show_downloads: True
 #theme: jekyll-theme-tactile 
