--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Miguel Ángel MD. / Data Science Portfolio
 #logo: /assets/img/Miguel-1.jpg
 #show_downloads: True
 theme: jekyll-theme-tactile 
-remote_theme: pages-themes/tactile@v0.2.0
+#remote_theme: pages-themes/tactile@v0.2.0
